--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -23,8 +23,6 @@
   
      
  
-        <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
-
     
       
              <%  @ordenes.each do |product| %>
@@ -57,7 +55,7 @@
 
                    <table style=  'font-size:80% ;width:100%'>    
                       <td> Contrato </td>
-                      <td> <%= product.codigointerno %> </td>
+                      <td> <%= product.secu_cont %> </td>
                       <td> </td>
                       <td></td>
                       <td></td>
@@ -69,6 +67,8 @@
                 <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product_secu_cont,product.moneda_id,product.month)%>        
 
                  <% @detalle.each do |orden1 | %> 
+
+                  <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
 
                       
                       <tr>
@@ -82,10 +82,13 @@
                       <td width="10%" align="right"> </td>
                       <td width="10%" align="right"><%= @saldo  %> </td>
                       </tr>
+                     </table>
+  
                       <%  @saldo +=@orden1.total %>
                       <%  @total_cargos = @orden1.total %>
 
                 <% end %>
+
                 <table style=  'font-size:80% ;width:100%'>       
                         <tr>
                         <td width="8%"> </td>
@@ -106,8 +109,7 @@
                 
               <%end%>
 
-        </table>
-        
+       
         
         <hr>
         
