--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -59,7 +59,7 @@
                       <td> </td>
                       <td></td>
                       <td></td>
-                       <td>Mon: <%= product.get_moneda %></td>
+                       <td>Mon: <%= product.get_moneda(product.moneda_id ) %></td>
                     </tr>
                     </table>
                     
