--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -64,7 +64,7 @@
                     </table>
                     
 
-                <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product_secu_cont,product.moneda_id,product.month)%>        
+                <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id,product.month)%>        
 
                  <% @detalle.each do |orden1 | %> 
 
