--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -63,50 +63,49 @@
                     </tr>
                     </table>
                     
-                   
+
                 <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id,product.month)%>        
 
-                 <% @detalle.each do |orden1 | %> 
+                <% if @detalle !=nil %>
+                        <% @saldo = 0 %>
+                     <% @detalle.each do |orden1 | %> 
 
-                  <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+                          <%  @saldo +=orden1.total %>
 
-                      
-                      <tr>
-                      <td width="8%"> <%= @orden1.code  %></td>
-                      <td width="8%"><%= @orden1.fecha.strftime("%d/%m/%Y")  %> </td>
-                      <td width="30%"><%= @orden1.version.descrip    %> </td>
-                      <td width="10%" align="right"><%= @orden1.quantity   %></td>
-                      <td width="5%" align="right"><%= @orden1.tiempo  %></td>
-                      <td width="10%" align="right"> </td>
-                      <td width="10%" align="right"><%= @orden1.total  %> </td>
-                      <td width="10%" align="right"> </td>
-                      <td width="10%" align="right"><%= @saldo  %> </td>
-                      </tr>
-                     </table>
-  
-                      <%  @saldo +=@orden1.total %>
-                      <%  @total_cargos = @orden1.total %>
-
-                <% end %>
-
-                <table style=  'font-size:80% ;width:100%'>       
-                        <tr>
-                        <td width="8%"> </td>
-                        <td width="8%">Total Mes  </td>
-                        <td width="30%"> </td>
-                        <td width="10%" align="right"> </td>
-                        <td width="5%" align="right"> </td>
-                        <td width="10%" align="right"> <%= @total_cargos  %></td>
-                        <td width="10%" align="right"> </td>
-                        <td width="10%" align="right"> </td>
-                        <td width="10%" align="right"> <%= @saldo  %> </td>
-                        </tr>
-                       
-                   </table>
+                         <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+                              
+                              <tr>
+                              <td width="8%"> <%= orden1.code  %></td>
+                              <td width="8%"><%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
+                              <td width="30%"><%= orden1.version.descrip    %> </td>
+                              <td width="10%" align="right"><%= orden1.quantity   %></td>
+                              <td width="5%" align="right"><%= orden1.tiempo  %></td>
+                              <td width="10%" align="right"> </td>
+                              <td width="10%" align="right"><%= orden1.total  %> </td>
+                              <td width="10%" align="right"> </td>
+                              <td width="10%" align="right"><%= @saldo  %> </td>
+                              </tr>
+                             </table>
+          
+                             
+                              <%  @total_cargos = orden1.total %>
 
 
-
-                
+                        <table style=  'font-size:80% ;width:100%'>       
+                            <tr>
+                            <td width="8%"> </td>
+                            <td width="8%">Total Mes  </td>
+                            <td width="30%"> </td>
+                            <td width="10%" align="right"> </td>
+                            <td width="5%" align="right"> </td>
+                            <td width="10%" align="right"> <%= @total_cargos  %></td>
+                            <td width="10%" align="right"> </td>
+                            <td width="10%" align="right"> </td>
+                            <td width="10%" align="right"> <%= @saldo  %> </td>
+                            </tr>
+                           
+                       </table>
+                    <%end%>   
               <%end%>
 
        
