--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -64,16 +64,18 @@
 
                 <% if @detalle !=nil %>
                         <% @saldo = 0 %>
+                        <% @total_cargos = 0 %>
+                        
                      <% @detalle.each do |orden1 | %> 
 
-                          <%  @saldo +=orden1.total %>
+                          <%  @saldo += orden1.total %>
 
                              <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
                               
                               <tr>
                               <td width="8%"> <%= orden1.code  %></td>
                               <td width="8%"><%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
-                              <% if orden1.version == nil %>
+                              <% if orden1.version != nil %>
                               <td width="30%"><%= orden1.version.descrip    %> </td>
                               <% else %>
                               <td width="30%"><%= orden1.version_id    %> </td>
