--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -60,7 +60,7 @@
                     </table>
                     
 
-                <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id,product.month)%>        
+                <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id)%>        
 
                 <% if @detalle !=nil %>
                         <% @saldo = 0 %>
@@ -83,7 +83,7 @@
                               <% end %>
                               <td width="10%" align="right"><%= orden1.quantity   %></td>
                               <td width="5%" align="right"><%= orden1.tiempo  %></td>
-                              <td width="10%" align="right"> </td>
+                              <td width="10%" align="right"><%= orden1.month %> </td>
                               <td width="10%" align="right"><%= orden1.total  %> </td>
                               <td width="10%" align="right"> </td>
                               <td width="10%" align="right"><%= @saldo  %> </td>
@@ -107,7 +107,9 @@
                                   <td width="10%" align="right"> <%= @saldo  %> </td>
                                   </tr>                           
                               </table>
-                    <%end%>   
+                    <%end%>
+
+
               <%end%>
           <%end%>
        
