--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -65,10 +65,13 @@
                 <% if @detalle !=nil %>
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
-                        
+                         <% lcMes = @detalle.first.month %> 
+
                      <% @detalle.each do |orden1 | %> 
 
-                          <%  @saldo += orden1.total %>
+                              <%  @saldo += orden1.total %>
+                              
+
 
                              <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
                               
@@ -93,6 +96,7 @@
                              
                               <%  @total_cargos = orden1.total %>
 
+                              <% if lcMes  != orden1.month %> 
 
                               <table style=  'font-size:80% ;width:100%'>       
                                   <tr>
@@ -107,6 +111,12 @@
                                   <td width="10%" align="right"> <%= @saldo  %> </td>
                                   </tr>                           
                               </table>
+                              <% else %>
+                                lcMes = orden1.month 
+                                @total_cargos = 0
+
+                              <% end %>
+
                     <%end%>
 
 
