--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -62,26 +62,24 @@
 
                 <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id)%>        
 
-                <% if @detalle !=nil %>
+                <% if @detalle != nil %>
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
-                         <% lcMes = @detalle.first.month %> 
+                        <% lcMes = 0 %> 
 
-                     <% @detalle.each do |orden1 | %> 
+                     <% @detalle.each do |orden1| %> 
 
                               <%  @saldo += orden1.total %>
-                              
-
 
                              <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
                               
                               <tr>
                               <td width="8%"> <%= orden1.code  %></td>
-                              <td width="8%"><%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
+                              <td width="8%"> <%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
                               <% if orden1.version != nil %>
-                              <td width="30%"><%= orden1.version.descrip    %> </td>
+                              <td width="30%"> <%= orden1.version.descrip    %> </td>
                               <% else %>
-                              <td width="30%"><%= orden1.version_id    %> </td>
+                              <td width="30%"> <%= orden1.version_id    %> </td>
                               
                               <% end %>
                               <td width="10%" align="right"><%= orden1.quantity   %></td>
