--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -38,7 +38,7 @@
                 
                   <table style=  'font-size:80% ;width:100%'>    
                     <tr style="font-weight:bold">
-                    <td>CANAL</td>
+                    <td>Medio: </td>
                     <td> <%= product.medio.descrip %></td>
                     <td> </td>
                     <td></td>
@@ -50,7 +50,9 @@
                   </table>
 
                    <table style=  'font-size:80% ;width:100%'>    
-                      <td> Contrato </td>
+                    <tr style="font-weight:bold">
+                   
+                      <td> Contrato : </td>
                       <td> <%= product.secu_cont %> </td>
                       <td> </td>
                       <td></td>
@@ -65,7 +67,7 @@
                 <% if @detalle != nil %>
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
-                        <% lcMes = 0 %> 
+                        <% lcMes = @detalle.first.month %> 
 
                      <% @detalle.each do |orden1| %> 
 
@@ -74,18 +76,18 @@
                              <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
                               
                               <tr>
-                              <td width="8%"> <%= orden1.code  %></td>
+                              <td width="15%"> <%= orden1.code  %></td>
                               <td width="8%"> <%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
                               <% if orden1.version != nil %>
-                              <td width="30%"> <%= orden1.version.descrip    %> </td>
+                              <td width="23%"> <%= orden1.version.descrip    %> </td>
                               <% else %>
-                              <td width="30%"> <%= orden1.version_id    %> </td>
+                              <td width="23%"> <%= orden1.version_id    %> </td>
                               
                               <% end %>
                               <td width="10%" align="right"><%= orden1.quantity   %></td>
-                              <td width="5%" align="right"><%= orden1.tiempo  %></td>
+                              <td width="5%"  align="right"> <%= orden1.tiempo  %></td>
                               <td width="10%" align="right"><%= orden1.month %> </td>
-                              <td width="10%" align="right"><%= orden1.total  %> </td>
+                              <td width="10%" align="right"><%= orden1.total.sprintf("%.2f")  %> </td>
                               <td width="10%" align="right"> </td>
                               <td width="10%" align="right"><%= @saldo  %> </td>
                               </tr>
