--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -86,7 +86,7 @@
     <div class="fi <div class="field">
       <%= f.label :medio_id %><br />
       <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','full_name') %>
-    </div>eld">
+    </div>
       <%= f.label :tiempo, "Duracion*", :class => "bold"   %><br />
       <%= f.number_field :tiempo   %>
     </div>
