--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -67,8 +67,12 @@
                 <% if @detalle != nil %>
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
-                        <% lcMes = @detalle.first.month %> 
+                        <% if @detalle.first,month ==nil %>
+                          <% lcMes = 0 %>
+                        <% else %>
+                          <% lcMes = @detalle.first.month %>
 
+                        <% end%>  
                      <% @detalle.each do |orden1| %> 
 
                               <%  @saldo += orden1.total %>
