--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -68,7 +68,7 @@
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
                        
-                          <% lcMes = 0 %>
+                          <% lcMes = @detalle.first.month  %>
                        
                      <% @detalle.each do |orden1| %> 
 
@@ -90,7 +90,7 @@
                               <td width="10%" align="right"><%= orden1.month %> </td>
                               <td width="10%" align="right"><%= sprintf("%.2f",orden1.total.to_s)  %> </td>
                               <td width="10%" align="right"> </td>
-                              <td width="10%" align="right"><%= @saldo  %> </td>
+                              <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
                               </tr>
                              </table>
           
@@ -99,19 +99,19 @@
 
                               <% if lcMes  != orden1.month %> 
 
-                              <table style=  'font-size:80% ;width:100%'>       
-                                  <tr>
-                                  <td width="8%"> </td>
-                                  <td width="8%">Total Mes  </td>
-                                  <td width="30%"> </td>
-                                  <td width="10%" align="right"> </td>
-                                  <td width="5%" align="right"> </td>
-                                  <td width="10%" align="right"> <%= @total_cargos  %></td>
-                                  <td width="10%" align="right"> </td>
-                                  <td width="10%" align="right"> </td>
-                                  <td width="10%" align="right"> <%= @saldo  %> </td>
-                                  </tr>                           
-                              </table>
+                                <table style=  'font-size:80% ;width:100%'>       
+                                    <tr>
+                                    <td width="8%"> </td>
+                                    <td width="8%">Total Mes  </td>
+                                    <td width="30%"> </td>
+                                    <td width="10%" align="right"> </td>
+                                    <td width="5%" align="right"> </td>
+                                    <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
+                                    <td width="10%" align="right"> </td>
+                                    <td width="10%" align="right"> <%= sprintf("%.2f",@saldo.to_s)%></td>
+                                    <td width="10%" align="right">  </td>
+                                    </tr>                           
+                                </table>
                               <% else %>
                                 lcMes = orden1.month 
                                 @total_cargos = 0
