--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -64,11 +64,11 @@
 
                 <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id)%>        
 
-                <% if @detalle != nil %>
+                <% if @detalle.all.size > 0 %>
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
                        
-                          <% lcMes = @detalle.first.month  %>
+                     <% lcMes = @detalle.first.month  %>
                        
                      <% @detalle.each do |orden1| %> 
 
@@ -78,15 +78,14 @@
                               
                               <tr>
                               <td width="15%"> <%= orden1.code  %></td>
-                              <td width="8%"> <%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
+                              <td width="8%">  <%= orden1.fecha.strftime("%d/%m/%Y")  %> </td>
                               <% if orden1.version != nil %>
-                              <td width="23%"> <%= orden1.version.descrip    %> </td>
+                              <td width="23%"> <%= orden1.version.descrip %> </td>
                               <% else %>
-                              <td width="23%"> <%= orden1.version_id    %> </td>
-                              
+                              <td width="23%"> <%= orden1.version_id %> </td>
                               <% end %>
-                              <td width="10%" align="right"><%= orden1.quantity   %></td>
-                              <td width="5%"  align="right"> <%= orden1.tiempo  %></td>
+                              <td width="10%" align="right"><%= orden1.quantity %></td>
+                              <td width="5%"  align="right"> <%= orden1.tiempo %></td>
                               <td width="10%" align="right"><%= orden1.month %> </td>
                               <td width="10%" align="right"><%= sprintf("%.2f",orden1.total.to_s)  %> </td>
                               <td width="10%" align="right"> </td>
