--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -88,12 +88,14 @@
                                 <td width="10%" align="right"><%= orden1.quantity %></td>
                                 <td width="5%"  align="right"><%= orden1.tiempo %></td>
                                 <td width="10%" align="right"><%= orden1.month %> </td>
+                                 <td width="10%" align="right"> </td>
                                 <td width="10%" align="right"><%= sprintf("%.2f",orden1.total.to_s)  %> </td>
-                                <td width="10%" align="right"> </td>
+                               
                                 <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
                                 </tr>
                                </table>                                       
-                              <%  @total_cargos = orden1.total %>
+                            
+                              <%   @total_mes += orden1.total %>
 
                            
                                 <% else %>
@@ -105,16 +107,20 @@
                                         <td width="30%"> </td>
                                         <td width="10%" align="right"> </td>
                                         <td width="5%" align="right"> </td>
-                                        <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
                                         <td width="10%" align="right"> </td>
-                                        <td width="10%" align="right"> <%= sprintf("%.2f",@saldo.to_s)%></td>
-                                        <td width="10%" align="right">  </td>
+                                        <td width="10%" align="right"><%= sprintf("%.2f",@total_mes.to_s)  %>  </td>
+
+                                        <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
+                                        
+                                        <td width="10%" align="right"></td>
+                                        
                                         </tr>                           
                                     </table>
-                                
+                                   <%  @total_cargos += @total_mes %>
+                                   <%  @total_mes  = 0 %>                                  
                                    <% lcMes = orden1.month %> 
-                                   <% @total_cargos = 0 %>
 
+                                   
                               <% end %>
 
                     <%end%>
