--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -67,7 +67,7 @@
                 <% if @detalle.all.size > 0 %>
                         <% @saldo = 0 %>
                         <% @total_cargos = 0 %>
-                       
+                       <% @total_mes  = 0 %>
                      <% lcMes = @detalle.first.month  %>
                        
                      <% @detalle.each do |orden1| %> 
