--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -23,7 +23,7 @@
       
         <%  @ordenes.each do |product| %>
 
-             <table style=  'font-size:80% ;width:100%'>
+             <table style=  'font-size:90% ;width:100%'>
                 <tr style="font-weight:bold">
                 <td>CLIENTE</td>
                 <td><%= product.customer.ruc %> </td>
@@ -87,7 +87,7 @@
                                 <% end %>
                                 <td width="10%" align="right"><%= orden1.quantity %></td>
                                 <td width="5%"  align="right"><%= orden1.tiempo %></td>
-                                <td width="10%" align="right"><%= orden1.month %> </td>
+                                <td width="10%" align="right"> </td>
                                 
                                 <td width="10%" align="right"><%= sprintf("%.2f",orden1.total.to_s)  %> </td>
                                 <td width="10%" align="right"> </td>
@@ -105,7 +105,7 @@
                                     <table style=  'font-size:80% ;width:100%'>       
                                         <tr>
                                         <td width="8%"> </td>
-                                        <td width="8%">Total Mes  </td>
+                                        <td width="8%">Total Mes : </td>
                                         <td width="30%"> </td>
                                         <td width="10%" align="right"> </td>
                                         <td width="5%" align="right"> </td>
@@ -124,6 +124,29 @@
 
                                    
                               <% end %>
+
+                              <%  @total_cargos += @total_mes %>
+                                    
+                                    <table style=  'font-size:80% ;width:100%'> 
+
+                                        <tr>
+                                        <td width="8%"> </td>
+                                        <td width="8%">Total Mes : </td>
+                                        <td width="30%"> <%= orden1.get_mes(orden1.month) %></td>
+                                        <td width="10%" align="right"> </td>
+                                        <td width="5%" align="right"> </td>
+                                        <td width="10%" align="right"> </td>
+                                        <td width="10%" align="right"><%= sprintf("%.2f",@total_mes.to_s)  %>  </td>
+
+                                        <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
+                                        
+                                        <td width="10%" align="right"></td>
+                                        
+                                        </tr>                           
+                                    </table>
+                                  
+
+
 
                     <%end%>
 
