--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -106,7 +106,7 @@
                                         <tr>
                                         <td width="8%"> </td>
                                         <td width="8%">Total Mes : </td>
-                                        <td width="30%"> </td>
+                                        <td width="30%"><%= orden1.get_mes(orden1.month )%> </td>
                                         <td width="10%" align="right"> </td>
                                         <td width="5%" align="right"> </td>
                                         <td width="10%" align="right"> </td>
