--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -28,7 +28,7 @@
                 <td>CLIENTE</td>
                 <td><%= product.customer.ruc %> </td>
                 <td><%= product.customer.name %> </td>
-                <td></td>
+                <td><%= product.customer.id %></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -40,7 +40,7 @@
                     <tr style="font-weight:bold">
                     <td>Medio: </td>
                     <td> <%= product.medio.descrip %></td>
-                    <td> </td>
+                    <td> <%= product.medio.id %></td>
                     <td></td>
                     <td></td>
                     <td></td>
