--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -146,11 +146,27 @@
                                    
                               <% end %>
 
-                              
-
-
-
                     <%end%>
+
+                    <%  @total_cargos += @total_mes %>
+                                    
+                      <table style=  'font-size:80% ;width:100%'>       
+                          <tr>
+                          <td width="8%"> </td>
+                          <td width="8%">Total Mes : </td>
+                          <td width="30%"><%= orden1.get_mes(orden1.month )%> </td>
+                          <td width="10%" align="right"> </td>
+                          <td width="5%" align="right"> </td>
+                          <td width="10%" align="right"> </td>
+                          <td width="10%" align="right"><%= sprintf("%.2f",@total_mes.to_s)  %>  </td>
+
+                          <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
+                          
+                          <td width="10%" align="right"></td>
+                          
+                          </tr>                           
+                      </table>
+
 
 
               <%end%>
