--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -71,6 +71,7 @@
                         <% @total_cargos = 0 %>
                        <% @total_mes  = 0 %>
                      <% lcMes = @detalle.first.month  %>
+                     <% last_month = @detalle.last.month %>
                        
                      <% @detalle.each do |orden1| %> 
 
@@ -154,7 +155,7 @@
                           <tr>
                           <td width="8%"> </td>
                           <td width="8%">Total Mes : </td>
-                          <td width="30%"><%= orden1.get_mes(orden1.month )%> </td>
+                          <td width="30%"><%= orden1.get_mes(last_month)%> </td>
                           <td width="10%" align="right"> </td>
                           <td width="5%" align="right"> </td>
                           <td width="10%" align="right"> </td>
