--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -142,7 +142,7 @@
                                     <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
                                     </tr>
                                    </table>           
-                                  
+                                    <%  @total_cargos += @total_mes %>
                                                                 
                                    <% lcMes = orden1.month %> 
 
