--- a/app/views/customer_contratos/show.html.erb
+++ b/app/views/customer_contratos/show.html.erb
@@ -35,5 +35,5 @@
   <%= @customer_contrato.moneda_id %>
 </p>
 
-<%= link_to 'Edit', edit_customer_contrato_path(@customer_contrato) %> |
-<%= link_to 'Back', customer_contratos_path %>
+<%= link_to 'Editar', edit_customer_contrato_path(@customer_contrato) %> |
+<%= link_to 'Regresar', customer_contratos_path %>
