--- a/app/views/customer_contratos/edit.html.erb
+++ b/app/views/customer_contratos/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @customer_contrato %> |
-<%= link_to 'Back', customer_contratos_path %>
+<%= link_to 'Ver', @customer_contrato %> |
+<%= link_to 'Regresar', customer_contratos_path %>
