--- a/app/views/customer_contratos/index.html.erb
+++ b/app/views/customer_contratos/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Customer</th>
-      <th>Secu org</th>
+      <th>Sec.Contr</th>
       <th>Medio</th>
       <th>Contrato</th>
       <th>Anio</th>
@@ -19,16 +19,16 @@
   <tbody>
     <% @customer_contratos.each do |customer_contrato| %>
       <tr>
-        <td><%= customer_contrato.customer_id %></td>
-        <td><%= customer_contrato.secu_org %></td>
-        <td><%= customer_contrato.medio_id %></td>
-        <td><%= customer_contrato.contrato_id %></td>
+        <td><%= customer_contrato.customer.name  %></td>
+        <td><%= customer_contrato.secu_cont %></td>
+        <td><%= customer_contrato.medio.descrip %></td>
+        <td><%= customer_contrato.contrato.code %></td>
         <td><%= customer_contrato.anio %></td>
         <td><%= customer_contrato.referencia %></td>
         <td><%= customer_contrato.moneda_id %></td>
-        <td><%= link_to 'Show', customer_contrato %></td>
-        <td><%= link_to 'Edit', edit_customer_contrato_path(customer_contrato) %></td>
-        <td><%= link_to 'Destroy', customer_contrato, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'ver', customer_contrato %></td>
+        <td><%= link_to 'Editar', edit_customer_contrato_path(customer_contrato) %></td>
+        <td><%= link_to 'Eliminar', customer_contrato, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
