--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -49,12 +49,13 @@
                     </tr>
                   </table>
 
+
                    <table style=  'font-size:80% ;width:100%'>    
                     <tr style="font-weight:bold">
                    
                       <td> Contrato : </td>
                       <td> <%= product.secu_cont %> </td>
-                      <td> </td>
+                      <td> <%= product.get_nro_contrato(product.secu_cont) %></td>
                       <td></td>
                       <td></td>
                        <td>Mon: <%= product.get_moneda(product.moneda_id ) %></td>
