--- a/app/views/companies/contratos.html.erb
+++ b/app/views/companies/contratos.html.erb
@@ -42,7 +42,17 @@
   </h3>
 
   <p>
-    Tipo de cambio sunat
+    Cliente por contrato
+  </p>
+
+<%= hr() %>
+ <h3>
+    <%= image_tag("reports_32.png", :class => "vmiddle") %>
+    <%= link_to "Abonos Contrato Clientes ", contrato_abonos_path %>
+  </h3>
+
+  <p>
+    Abono Contrato clientes 
   </p>
 <%= hr() %>
 
