--- a/app/views/contrato_abonos/_form.html.erb
+++ b/app/views/contrato_abonos/_form.html.erb
@@ -33,8 +33,8 @@
     </div>
 
     <div class="field">
-       <%= f.label :customer_contrato_id %><br />
-      <%= f.select :customer_contrato_id,options_from_collection_for_select(@customercontrato,'id','secu_cont') %>
+       <%= f.label :secu_cont %><br />
+      <%= f.select :secu_cont,options_from_collection_for_select(@customercontrato,'secu_cont','secu_cont') %>
     </div>
 
 
