--- a/app/views/contrato_abonos/new.html.erb
+++ b/app/views/contrato_abonos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Contrato Abono</h1>
+<h1>Nuevo  Contrato Abono</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', contrato_abonos_path %>
+<%= link_to 'Regresar', contrato_abonos_path %>
