--- a/app/views/contrato_abonos/_form.html.erb
+++ b/app/views/contrato_abonos/_form.html.erb
@@ -21,7 +21,7 @@
 
     <div class="field">    
       <%= f.label :fecha %><br />
-      <%= f.text_field :fecha  %>
+      <%= f.date  _field :fecha  %>
     </div>
 
 
