--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -53,8 +53,8 @@
     </div>
 
     <div class="field">
-      <%= f.label :contrato_id %><br />
-      <%= f.select :contrato_id,options_from_collection_for_select(@contratos,'id','code') %>
+      <%= f.label :secu_cont %><br />
+      <%= f.select :secu_cont,options_from_collection_for_select(@contratos2,'secu_cont','secu_cont') %>
        
     </div>
     <div class="field">
