--- a/app/views/contrato_abonos/index.html.erb
+++ b/app/views/contrato_abonos/index.html.erb
@@ -39,3 +39,10 @@
 <br>
 
 <%= link_to 'Nuevo Contrato abono', new_contrato_abono_path %>
+
+
+
+<%= form_tag import_contrato_abonos_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Importar " %>
+<% end %>
