--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -61,14 +61,39 @@
                        <td>Mon: <%= product.get_moneda(product.moneda_id ) %></td>
                     </tr>
                     </table>
+
+                 <%  @abonos = product.get_abonos_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id)%>       
+                    <% if @abonos.all.size > 0 %>
+                        <% @saldo = 0 %>
+
+                     <% @abonos.each do |abonos| %> 
+                         <%  @saldo += orden1.total %>
+                         <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+                              <tr>
+                              <td width="15%"> </td>
+                              <td width="8%">  <%= abonos.fecha.strftime("%d/%m/%Y")  %> </td>
+                             
+                              <td width="23%">  </td>
+                             
+                              <td width="10%" align="right"></td>
+                              <td width="5%"  align="right"></td>
+                              <td width="10%" align="right"><%= sprintf("%.2f",abonos.total.to_s)  %> </td>
+                              
+                              <td width="10%" align="right"> </td>
+                              <td width="10%" align="right"> </td>
+                              <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
+                              </tr>
+                             </table>                 
+                         <% end %>
+
+                    <% end %>  
                     
 
                 <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id)%>      
 
                 
-
                 <% if @detalle.all.size > 0 %>
-                        <% @saldo = 0 %>
+                        
                         <% @total_cargos = 0 %>
                        <% @total_mes  = 0 %>
                      <% lcMes = @detalle.first.month  %>
@@ -76,7 +101,7 @@
                        
                      <% @detalle.each do |orden1| %> 
 
-                            <%  @saldo += orden1.total %>
+                            <%  @saldo -= orden1.total %>
 
                             <% if lcMes  == orden1.month %> 
 
