--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -67,7 +67,7 @@
                         <% @saldo = 0 %>
 
                      <% @abonos.each do |abonos| %> 
-                         <%  @saldo += orden1.total %>
+                         <%  @saldo += abonos.total %>
                          <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
                               <tr>
                               <td width="15%"> </td>
