--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -86,7 +86,9 @@
                              </table>                 
                          <% end %>
 
+                        <% end %>  
                     <% end %>  
+
                     
 
                 <%  @detalle = product.get_ordenes_detalle(@fecha1,@fecha2,product.customer_id,product.medio_id,product.secu_cont,product.moneda_id)%>      
