--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -82,7 +82,7 @@
                              
                               <td width="10%" align="right"></td>
                               <td width="5%"  align="right"></td>
-                              <td width="10%" align="right"><%= sprintf("%.2f",abonos.total.to_s)  %> </td>
+                              <td width="10%" align="right"><%= sprintf("%.2f",abonos.importe.to_s)  %> </td>
                               
                               <td width="10%" align="right"> </td>
                               <td width="10%" align="right"> </td>
