--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -63,7 +63,8 @@
 
 <% if @orden.tipo == "N" %>
 <div class="button">
-<%= link_to 'Agregar Item', new_orden_orden_product_path(@orden) %>
+<%= link_to 'Agregar Item', new_orden_orden_product_path(@orden) :popup => ['Modelo Educacional', 'height=300,width=600'] %>
+
 </div> 
 <% end %>
 <h3>
