--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -63,7 +63,24 @@
 
 <% if @orden.tipo == "N" %>
 <div class="button">
-<%= link_to 'Agregar Item', new_orden_orden_product_path(@orden), :popup => ['Ordenes', 'height=300,width=600'] %>
+<%= link_to 'Agregar Item', new_orden_orden_product_path(@orden) %>
+
+<%= link_to( ‘quick help‘.html_safe,
+new_orden_orden_product_path(@orden),
+‘data-popup’ => true,
+:class => “button_class”,
+:onclick=>“window.open(this.href,’quick_help’, ‘height=800, width=500’);
+return false;”
+) %>            “/about/quick_help”,
+
+            ‘data-popup’ => true,
+
+            :class => “button_class”,
+
+            :onclick=>“window.open(this.href,’quick_help’, ‘height=800, width=500’);
+return false;”
+                                        return false;”   ) %><br>
+
 
 </div> 
 <% end %>
