--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -65,20 +65,20 @@
 <div class="button">
 <%= link_to 'Agregar Item', new_orden_orden_product_path(@orden) %>
 
-<%= link_to( ‘quick help‘.html_safe,
+<%= link_to( 'Add item',
 new_orden_orden_product_path(@orden),
-‘data-popup’ => true,
-:class => “button_class”,
-:onclick=>“window.open(this.href,’quick_help’, ‘height=800, width=500’);
-return false;”
-) %>            “/about/quick_help”,
+'data-popup' => true,
+:class => "button_class",
+:onclick=>"window.open(this.href,'quick_help', 'height=800, width=500');
+return false;"
+) %>            "/about/quick_help",
 
-            ‘data-popup’ => true,
+            'data-popup' => true,
 
-            :class => “button_class”,
+            :class => "button_class",
 
-            :onclick=>“window.open(this.href,’quick_help’, ‘height=800, width=500’);
-return false;”
+            :onclick=>"window.open(this.href,'quick_help', 'height=800, width=500');
+return false;" 
                                         return false;”   ) %><br>
 
 
